Home Page css stylesheet has been added

--- a/Offsight/app/Resources/views/default/home.html.twig
+++ b/Offsight/app/Resources/views/default/home.html.twig
@@ -5,6 +5,7 @@
         <title>{% block title %}Offsight{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="" />
+        <link rel="stylesheet" type="text/css" href="{{ asset('css/HomePage.css') }}" />
     </head>
     <body>
         <div class="FirstLocation">
