--- a/Offsight/web/css/HomePage.css
+++ b/Offsight/web/css/HomePage.css
@@ -1,6 +1,91 @@
-.FirstLocation{}
-.FirstLocationHeader{}
-.SecondLocation{}
-.SecondLocationHeader{}
-.ThirdLocation{}
-.ThirdLocationHeader{}
+.FirstLocation{
+  /*border: 5px black solid;*/
+
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /*background-color: orange;*/
+  width: 100%;
+  min-height: 100vh;
+  max-height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0 auto;
+  background-image: url('/img/playstation1.jpeg');
+  background-size: 100%;
+
+
+
+
+}
+.FirstLocationHeader{
+  width: 50%;
+  text-align: center;
+  background-color: rgba(255,103,0, 0.7);
+
+}
+.SecondLocation{
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  min-height: 100vh;
+  max-height: 100%;
+  position: absolute;
+  top: 100vh;
+  left: 0;
+  margin: 0 auto;
+  background-image: url('/img/playstation2.jpg');
+  background-size: 100%;
+}
+.SecondLocationHeader{
+
+  width: 50%;
+  text-align: center;
+  background-color: rgba(255,103,0, 0.7);
+}
+.ThirdLocation{
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  max-height: 100%;
+  position: absolute;
+  top: 200vh;
+  left: 0;
+  margin: 0 auto;
+  background-image: url('/img/playstation3.jpg');
+  background-size: 100%;
+
+}
+.ThirdLocationHeader{
+
+  width: 50%;
+  text-align: center;
+  background-color: rgba(255,103,0, 0.7);
+}
+.LocationHeader{
+  font-family: 'Oswald';
+  font-size: 50px;
+}
+
+.DateParagraph{
+  font-family: 'Oswald';
+  font-size: 25px;
+}
+
+.MoreButton{
+  font-family: 'Oswald';
+  font-size: 25px;
+  padding: 15px 50px;
+  margin-bottom: 20px;
+  background-color: rgb(244, 204, 11);
+  border: 5px solid rgb(244, 204, 11);
+  font-weight: bold;
+}
