Poznan Page has been uploaded

--- a/Offsight/app/Resources/views/default/home.html.twig
+++ b/Offsight/app/Resources/views/default/home.html.twig
@@ -13,7 +13,7 @@
           <div class="FirstLocationHeader">
             <h1 class="LocationHeader">POZNAŃ</h1>
             <p class="DateParagraph">20.10.2017</p>
-            <button class="MoreButton" type="button">WIĘCEJ</button>
+            <button class="MoreButton" type="button"><a href="{{ path('poznan') }}">WIĘCEJ</a></button>
           </div>
         </div>
         <div class="SecondLocation">
