--- a/Offsight/app/Resources/views/default/poznan.html.twig
+++ b/Offsight/app/Resources/views/default/poznan.html.twig
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="PoznanHeader">
-          <img src="/img/header.png" class="HeaderImage" />
+          <a href={{path('home')}}><img src="/img/header.png" class="HeaderImage" /></a>
         </div>
         <div class="PoznanInfo">
           <p class="PoznanParagraph">
