--- a/Offsight/app/Resources/views/default/poznan.html.twig
+++ b/Offsight/app/Resources/views/default/poznan.html.twig
@@ -18,6 +18,26 @@
           <p class="PoznanParagraph">
             Co?
           </p>
+          <p>
+            Zapraszamy na pierwszy Offsight - wirtualny turniej piłki nożnej dla firm. Zbierz swoją drużynę (zalecamy od dwóch do czterech osób) i zmierz się z innymi! Wszyscy uczestnicy otrzymają piwo oraz pizzę, podczas całego turnieju grać będzie DJ. Zespoły z pierwszych trzech miejsc otrzymają atrakcyjne nagrody, przewidujemy także nagrody-niespodzianki! Firmy, których przedstawiciele zajmą medalowe miejsca zostaną poproszone o wytypowanie celów charytatywnych, na które organizatorzy przekażą 500 złotych (łącznie 1500 złotych zostanie przekazane na cele charytatywne). Turniej odbywa się w systemie analogicznym do prawdziwych turniejów piłkarskich: najpierw trzy mecze w grupach, a później – faza pucharowa, do której trafi 16 z 32 drużyn.
+          </p>
+          <p>
+            Wstępny harmonogram:<ul>
+
+            <li>18:30 | losowanie</li>
+            <li>19:00 | pierwsza kolejka fazy grupowej</li>
+            <li>20:00 | druga kolejka fazy grupowej</li>
+            <li>21:00 | trzecia kolejka fazy grupowej</li>
+            <li>22:00 - 1/8 finału</li>
+            <li>22:30 - 1/4 finału</li>
+            <li>22:45 - 1/2 finału</li>
+            <li>23:00 - mecz o 3. miejsce</li>
+            <li>23:15 - finał!</li>
+          </ul>
+          </p>
+          <p>Koszt: 300 złotych netto / zespół</p>
+          <button class="RegistrationButton" type="button"><a target="_blank" href="https://goo.gl/forms/P3BlBWMcpTa61UZY2">Zgłoś się</a></button>
+
         </div>
         <div class="PoznanForm">
           <p class="PoznanParagraph">
