--- a/Offsight/web/css/PoznanPage.css
+++ b/Offsight/web/css/PoznanPage.css
@@ -12,11 +12,8 @@
   background-color: white;
 }
 .PoznanInfo{
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 100%;
-  min-height: 50vh;
+  min-height: 80vh;
   max-height: 10%;
   position: absolute;
   top: 50vh;
@@ -33,7 +30,7 @@
   min-height: 50vh;
   max-height: 10%;
   position: absolute;
-  top: 100vh;
+  top: 150vh;
   left: 0;
   margin: 0 auto;
   background-color: white;
@@ -52,4 +49,14 @@
 .PoznanParagraph{
   font-family: 'Oswald';
   font-size: 50px;
+}
+
+.RegistrationButton{
+  font-family: 'Oswald';
+  font-size: 25px;
+  padding: 15px 50px;
+  margin-bottom: 20px;
+  background-color: rgb(244, 204, 11);
+  border: 5px solid rgb(244, 204, 11);
+  font-weight: bold;
 }
