--- a/Offsight/app/Resources/views/default/aboutus.html.twig
+++ b/Offsight/app/Resources/views/default/aboutus.html.twig
@@ -1,3 +1,6 @@
+
+{% block body %}
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -62,7 +65,15 @@
           </div>
           </div>
         </div>
+        <div id="ContactForm" style="width: 100%; height: 200px; position: absolute; top: 200vh">
+          {{ form_start(form) }}
+          {{ form_widget(form) }}
+          {{ form_end(form) }}
+        </div>
+
 
         {% block javascripts %}{% endblock %}
     </body>
 </html>
+
+{% endblock %}
