--- a/Offsight/web/css/AboutPage.css
+++ b/Offsight/web/css/AboutPage.css
@@ -111,3 +111,10 @@ text-decoration: none;
   height: 40%;
 
 }
+
+.ContactForm{
+  position: absolute;
+  width: 100%;
+  height: 150px;
+  top: 170vh;
+}
