--- a/Offsight/web/css/PoznanPage.css
+++ b/Offsight/web/css/PoznanPage.css
@@ -60,3 +60,15 @@
   border: 5px solid rgb(244, 204, 11);
   font-weight: bold;
 }
+
+#ContactForm{
+  width: 100%;
+  height: 200px;
+  position: absolute;
+  top: 250vh
+  width: 100%;
+  left: 0;
+  margin: 0 auto;
+  background-color: white;
+  text-align: center;
+}
