--- a/Offsight/app/Resources/views/default/home.html.twig
+++ b/Offsight/app/Resources/views/default/home.html.twig
@@ -20,14 +20,14 @@
           <div class="SecondLocationHeader">
             <h1 class="LocationHeader">WROCŁAW</h1>
             <p class="DateParagraph">WKRÓTCE</p>
-            <button class="MoreButton" type="button">Więcej</button>
+            <button class="MoreButton" type="button"><a href="">Więcej</a></button>
           </div>
         </div>
         <div class="ThirdLocation">
           <div class="ThirdLocationHeader">
             <h1 class="LocationHeader">ŁÓDŹ</h1>
             <p class="DateParagraph">WKRÓTCE</p>
-            <button class="MoreButton" type="button">Więcej</button>
+            <button class="MoreButton" type="button"><a href="">Więcej</a></button>
           </div>
         </div>
         <div class="AboutUs">
