--- a/Offsight/app/Resources/views/default/poznan.html.twig
+++ b/Offsight/app/Resources/views/default/poznan.html.twig
@@ -19,10 +19,10 @@
           <p class="PoznanParagraph">
             Co?
           </p>
-          <p>
+          <p class="PoznanDescription">
             Zapraszamy na pierwszy Offsight - wirtualny turniej piłki nożnej dla firm. Zbierz swoją drużynę (zalecamy od dwóch do czterech osób) i zmierz się z innymi! Wszyscy uczestnicy otrzymają piwo oraz pizzę, podczas całego turnieju grać będzie DJ. Zespoły z pierwszych trzech miejsc otrzymają atrakcyjne nagrody, przewidujemy także nagrody-niespodzianki! Firmy, których przedstawiciele zajmą medalowe miejsca zostaną poproszone o wytypowanie celów charytatywnych, na które organizatorzy przekażą 500 złotych (łącznie 1500 złotych zostanie przekazane na cele charytatywne). Turniej odbywa się w systemie analogicznym do prawdziwych turniejów piłkarskich: najpierw trzy mecze w grupach, a później – faza pucharowa, do której trafi 16 z 32 drużyn.
           </p>
-          <p>
+          <p class="PoznanDescription">
             Wstępny harmonogram:<ul>
 
             <li>18:30 | losowanie</li>
@@ -36,7 +36,7 @@
             <li>23:15 - finał!</li>
           </ul>
           </p>
-          <p>Koszt: 300 złotych netto / zespół</p>
+          <p class="PoznanDescription">Koszt: 300 złotych netto / zespół</p>
           <button class="RegistrationButton" type="button"><a target="_blank" href="#ContactForm">Zgłoś się</a></button>
 
         </div>
@@ -50,7 +50,7 @@
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1216.95448341497!2d16.92435509811735!3d52.40832605265624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd8b8d15cc295ac5b!2sMalta+Festival+Pozna%C5%84!5e0!3m2!1spl!2spl!4v1502057229892" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
         </div>
-        <div id="ContactForm" style="width: 100%; height: 200px; position: absolute; top: 250vh">
+        <div id="ContactForm">
           <p class="PoznanParagraph">
             Jak się zgłosić?
           </p>
