--- a/Offsight/web/css/HomePage.css
+++ b/Offsight/web/css/HomePage.css
@@ -120,7 +120,7 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  background-position: center; 
+  background-position: center;
 }
 .AboutUsHeader{
   width: 50%;
@@ -130,4 +130,13 @@
 .AboutHeader{
   font-family: 'Oswald';
   font-size: 50px;
+}
+
+a{
+  color: black;
+  text-decoration: none;
+}
+
+a:hover{
+  color: white;
 }
