--- a/Offsight/web/css/PoznanPage.css
+++ b/Offsight/web/css/PoznanPage.css
@@ -40,7 +40,7 @@
   min-height: 50vh;
   max-height: 10%;
   position: absolute;
-  top: 150vh;
+  top: 220vh;
   left: 0;
   margin: 0 auto;
   background-color: white;
@@ -49,6 +49,12 @@
 .PoznanParagraph{
   font-family: 'Oswald';
   font-size: 50px;
+}
+.PoznanDescription{
+  font-family: 'Oswald';
+  padding-left: 10%;
+  padding-right: 10%;
+  font-size: 25px;
 }
 
 .RegistrationButton{
@@ -65,10 +71,35 @@
   width: 100%;
   height: 200px;
   position: absolute;
-  top: 250vh
+  top: 320vh;
   width: 100%;
   left: 0;
   margin: 0 auto;
   background-color: white;
   text-align: center;
+}
+
+@media screen and (max-width: 700px){
+  .PoznanMap{
+    top: 390vh;
+  }
+  #ContactForm{
+    top: 490vh;
+  }
+}
+
+ul{
+  font-family: 'Oswald';
+  padding-left: 10%;
+  padding-right: 10%;
+  font-size: 25px;
+  list-style: none;
+}
+a{
+  color: black;
+  text-decoration: none;
+}
+
+a:hover{
+  color: white;
 }
