--- a/Offsight/web/css/PoznanPage.css
+++ b/Offsight/web/css/PoznanPage.css
@@ -1,11 +1,13 @@
+body{
+  margin: 0px;
+  font-family: 'Oswald';
+}
 .PoznanHeader{
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
-  min-height: 50vh;
-  max-height: 10%;
-  position: absolute;
+
   top: 0;
   left: 0;
   margin: 0 auto;
@@ -13,10 +15,7 @@
 }
 .PoznanInfo{
   width: 100%;
-  min-height: 80vh;
-  max-height: 10%;
-  position: absolute;
-  top: 50vh;
+
   left: 0;
   margin: 0 auto;
   background-color: white;
@@ -27,20 +26,14 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  min-height: 50vh;
-  max-height: 10%;
-  position: absolute;
-  top: 150vh;
+
   left: 0;
   margin: 0 auto;
   background-color: white;
 }
 .PoznanMap{
   width: 100%;
-  min-height: 50vh;
-  max-height: 10%;
-  position: absolute;
-  top: 220vh;
+
   left: 0;
   margin: 0 auto;
   background-color: white;
@@ -49,6 +42,9 @@
 .PoznanParagraph{
   font-family: 'Oswald';
   font-size: 50px;
+
+  text-align: center;
+  width: 100%;
 }
 .PoznanDescription{
   font-family: 'Oswald';
@@ -67,26 +63,9 @@
   font-weight: bold;
 }
 
-#ContactForm{
-  width: 100%;
-  height: 200px;
-  position: absolute;
-  top: 320vh;
-  width: 100%;
-  left: 0;
-  margin: 0 auto;
-  background-color: white;
-  text-align: center;
-}
 
-@media screen and (max-width: 700px){
-  .PoznanMap{
-    top: 390vh;
-  }
-  #ContactForm{
-    top: 490vh;
-  }
-}
+
+
 
 ul{
   font-family: 'Oswald';
@@ -102,4 +81,67 @@ a{
 
 a:hover{
   color: white;
+}
+form{
+  text-align: center;
+  width: 100%;
+}
+input{
+  width: 50%;
+  margin: 20px;
+  border: 5px solid #FF6700;
+  border-radius: 5px;
+  font-weight: 800;
+  font-size: 15px;
+  padding: 10px;
+  text-align: center;
+}
+label{
+  visibility: hidden;
+}
+button{
+  font-family: 'Oswald';
+  font-size: 25px;
+  padding: 15px 50px;
+  margin-bottom: 20px;
+  background-color: rgb(244, 204, 11);
+  border: 5px solid rgb(244, 204, 11);
+  font-weight: bold;
+}
+button:hover{
+  color: white;
+  cursor:pointer;
+}
+#ContactForm{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+
+  left: 0;
+  margin: 0 auto;
+
+}
+.PoznanParagraphWhere{
+  font-family: 'Oswald';
+  font-size: 50px;
+}
+.FormBox{
+  width: 100%;
+  display: inline-block;
+  left: 0;
+  margin: 0 auto;
+  background-image: url('/img/field.jpg');
+  background-size: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-position: center;
+}
+.FormHeader{
+  font-size: 50px;
+  text-align: center;
+  color: white;
+  margin-top: 100px;
 }
