--- a/Offsight/app/Resources/views/default/home.html.twig
+++ b/Offsight/app/Resources/views/default/home.html.twig
@@ -13,27 +13,35 @@
           <div class="FirstLocationHeader">
             <h1 class="LocationHeader">POZNAŃ</h1>
             <p class="DateParagraph">20.10.2017</p>
-            <button class="MoreButton" type="button"><a href="{{ path('poznan') }}">Więcej</a></button>
+            <p class="MoreButtonParagraph">
+              <a class="MoreButton" href="{{ path('poznan') }}">Więcej</a>
+            </p>
           </div>
         </div>
         <div class="SecondLocation">
           <div class="SecondLocationHeader">
             <h1 class="LocationHeader">WROCŁAW</h1>
             <p class="DateParagraph">WKRÓTCE</p>
-            <button class="MoreButton" type="button"><a href="">Więcej</a></button>
+            <p class="MoreButtonParagraph">
+              <a class="MoreButton" href="">Więcej</a>
+            </p>
           </div>
         </div>
         <div class="ThirdLocation">
           <div class="ThirdLocationHeader">
             <h1 class="LocationHeader">ŁÓDŹ</h1>
             <p class="DateParagraph">WKRÓTCE</p>
-            <button class="MoreButton" type="button"><a href="">Więcej</a></button>
+            <p class="MoreButtonParagraph">
+              <a class="MoreButton" href="">Więcej</a>
+            </p>
           </div>
         </div>
         <div class="AboutUs">
           <div class="AboutUsHeader">
             <h1 class="AboutHeader">O NAS</h1>
-            <button class="MoreButton" type="button"><a href="{{ path('onas') }}">Kontakt</a></button>
+            <p class="MoreButtonParagraph">
+              <a class="MoreButton" href="{{ path('onas') }}">Kontakt</a>
+            </p>  
           </div>
         </div>
         {% block javascripts %}{% endblock %}
