Wroclaw and Lodz subpages have been implemented

--- a/Offsight/app/Resources/views/default/home.html.twig
+++ b/Offsight/app/Resources/views/default/home.html.twig
@@ -23,7 +23,7 @@
             <h1 class="LocationHeader">WROCŁAW</h1>
             <p class="DateParagraph">WKRÓTCE</p>
             <p class="MoreButtonParagraph">
-              <a class="MoreButton" href="">Więcej</a>
+              <a class="MoreButton" href="{{ path('wroclaw') }}">Więcej</a>
             </p>
           </div>
         </div>
@@ -32,7 +32,7 @@
             <h1 class="LocationHeader">ŁÓDŹ</h1>
             <p class="DateParagraph">WKRÓTCE</p>
             <p class="MoreButtonParagraph">
-              <a class="MoreButton" href="">Więcej</a>
+              <a class="MoreButton" href="{{ path('lodz') }}">Więcej</a>
             </p>
           </div>
         </div>
@@ -41,7 +41,7 @@
             <h1 class="AboutHeader">O NAS</h1>
             <p class="MoreButtonParagraph">
               <a class="MoreButton" href="{{ path('onas') }}">Kontakt</a>
-            </p>  
+            </p>
           </div>
         </div>
         {% block javascripts %}{% endblock %}
