Google Analitics has been implemented

--- a/Offsight/app/Resources/views/default/lodz.html.twig
+++ b/Offsight/app/Resources/views/default/lodz.html.twig
@@ -9,7 +9,16 @@
         <link rel="stylesheet" type="text/css" href="{{ asset('css/LodzPage.css') }}" />
         <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7A9RN0emXJmj7OJjZG3IzxVPGXACcSRs&callback=initMap" type="text/javascript"></script>
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+            ga('create', 'UA-105768842-1', 'auto');
+            ga('send', 'pageview');
+
+      </script>
     </head>
     <body>
         <div class="LodzHeader">
