--- a/Offsight/app/Resources/views/default/registration.html.twig
+++ b/Offsight/app/Resources/views/default/registration.html.twig
@@ -6,23 +6,29 @@
         <title>{% block title %}Offsight{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="" />
-        <link rel="stylesheet" type="text/css" href="{{ asset('css/LodzPage.css') }}" />
+        <link rel="stylesheet" type="text/css" href="{{ asset('css/RegistrationPage.css') }}" />
         <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7A9RN0emXJmj7OJjZG3IzxVPGXACcSRs&callback=initMap" type="text/javascript"></script>
-        
+
     </head>
     <body>
-        <div class="LodzHeader">
+        <div class="RegistrationHeader">
           <a href={{path('home')}}><img src="/img/header.png" class="HeaderImage" /></a>
         </div>
-        <div class="LodzInfo">
-          <p class="LodzParagraph">
-            Wkrótce więcej informacji
+        <div class="RegistrationInfo">
+          <p class="RegistrationParagraph">
+            Dziękujemy za rejestrację na Offsight Poznań 20.10.2017.
+          </p>
+          <p class="RegistrationParagraph">
+            Wkrótce się z Państwem skontaktujemy.
+          </p>
+          <p class="RegistrationParagraph">
+            Zespół Offsight
           </p>
           <p class="MoreButtonParagraph">
-            <a class="RegistrationButton" href="{{ path('home') }}">Powrót do strony głównej</a>
+            <a class="RegistrationButton" href="{{ path('poznan') }}">Powrót</a>
           </p>
-          <p class="LodzDescription">
+          <p class="RegistrationDescription">
           </p>
 
         </div>
