--- a/Offsight/app/Resources/views/default/registration.html.twig
+++ b/Offsight/app/Resources/views/default/registration.html.twig
@@ -12,6 +12,14 @@
 
     </head>
     <body>
+      <div class="InfoBox">
+        <div class="HomeIcon">
+          <a href="{{path('home')}}"><img src='/img/home.png' /></a>
+        </div>
+        <div class="ContactIcon">
+          <a href="{{path('onas')}}"><img src='/img/contact.png' /></a>
+        </div>
+      </div>
         <div class="RegistrationHeader">
           <a href={{path('home')}}><img src="/img/header.png" class="HeaderImage" /></a>
         </div>
