--- a/Offsight/app/Resources/views/default/aboutus.html.twig
+++ b/Offsight/app/Resources/views/default/aboutus.html.twig
@@ -1,5 +1,5 @@
 
-{% block body %}
+
 
 <!DOCTYPE html>
 <html>
@@ -14,6 +14,14 @@
 
     </head>
     <body>
+        <div class="InfoBox">
+          <div class="HomeIcon">
+            <a href="{{path('home')}}"><img src='/img/home.png' /></a>
+          </div>
+          <div class="ContactIcon">
+            <a href="{{path('onas')}}"><img src='/img/contact.png' /></a>
+          </div>
+        </div>
         <div class="PoznanHeader">
           <a href={{path('home')}}><img src="/img/header.png" class="HeaderImage" /></a>
         </div>
@@ -80,5 +88,3 @@
         {% block javascripts %}{% endblock %}
     </body>
 </html>
-
-{% endblock %}
