--- a/Offsight/web/css/AboutPage.css
+++ b/Offsight/web/css/AboutPage.css
@@ -167,3 +167,29 @@ button:hover{
   background-size: cover;
   background-position: center;
 }
+.InfoBox{
+  width: 50px;
+  height: 100px;
+  position: fixed;
+  top: 0px;
+  background-color: black;
+  z-index:1001;
+}
+
+.HomeIcon{
+  background-color: rgb(255,103,0);
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ContactIcon{
+  background-color: rgb(244, 204, 11);
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
