--- a/Offsight/web/css/HomePage.css
+++ b/Offsight/web/css/HomePage.css
@@ -157,3 +157,11 @@ a:hover{
   align-items: center;
   justify-content: center;
 }
+
+@media screen and (max-width: 700px){
+  .FirstLocationHeader, .SecondLocationHeader, .ThirdLocationHeader, .AboutUsHeader{
+    width: 80%;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+}
