--- a/Offsight/web/css/PoznanPage.css
+++ b/Offsight/web/css/PoznanPage.css
@@ -171,3 +171,11 @@ button:hover{
   align-items: center;
   justify-content: center;
 }
+@media screen and (max-width: 700px){
+  input{
+    width: 80%;
+  }
+  button{
+    font-size: 40px;
+  }
+}
